# smda-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  linux_arm7.yml  release.yml
examples/: aarch64_probe.rs  smdadump.rs
src/: delphi.rs  demangle.rs  dwarf.rs  elf.rs  error.rs  function.rs  function_analysis_state.rs  function_candidate.rs  function_candidate_manager.rs  indirect_call_analyser.rs  jump_table_analyser.rs  label_provider.rs  lib.rs  macho.rs  mnemonic_tf_idf.rs  pclntab.rs  pe.rs  report.rs  statistics.rs  tail_call_analyser.rs  xmetadata.rs
src/disassembler/: aarch64_ops.rs  mod.rs
src/label_providers/: elf_api_resolver.rs  elf_symbol_provider.rs  mod.rs  pdb_symbol_provider.rs  win_api_resolver.rs
