[package]
name = "smda"
description = "SMDA is a minimalist recursive disassembler library."
version = "0.2.13"
authors = ["Marirs <marirs@gmail.com>", "Andrey Mnatsakanov <andrey@3ig.kiev.ua>", "Jorge Alejandro Durán Royo<jorge.duran.royo@gmail.com>"]
keywords = ["smda", "disassembler", "cfg", "capstone"]
categories = ["parsing", "development-tools::debugging"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/marirs/smda-rs"
homepage = "https://github.com/marirs/smda-rs"
include = ["assets", "src"]
edition = "2021"

[dependencies]
capstone = "0.13.0"
data-encoding = "2.6.0"
goblin = { version = "0.10.0", features = ["alloc"] }
hex = "0.4.3"
itertools = "0.13.0"
lazy_static = "1"
maplit = "1.0.2"
regex = "1.5.5"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[lib]
name = "smda"
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
